@@ -5,6 +5,8 @@
 
 Changes in Version 0.1-3 (2011-07-15)
 
+    o Test functions rosenbrock() and wood().
+
     o fletcher_powell() Davidon-Fletcher-Powell method.
 
     o steep_descent() steepest descent minimization method.
